tests/feature_tests/snapshots/e2e__feature_tests__partial_semver__PowerShell.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
$ErrorActionPreference = "Stop"
fnm env | Out-String | Invoke-Expression
fnm install 6
fnm use 6
If ("$(node -v)" -ne "v6.17.1") {
    Write-Output ('Expected Node version to be "v6.17.1", Got: ' + $(node -v))
    exit 1
}
