tests/feature_tests/snapshots/e2e__feature_tests__partial_semver__Zsh.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env)"
fnm install 6
fnm use 6
if [ "$(node -v)" != "v6.17.1" ]; then
    echo 'Expected Node version to be "v6.17.1", Got: '"$(node -v)"
    exit 1
fi
